--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,8 +6,9 @@
         </head>
         <body>
                 <div>
-                    <a href="/">HOME</a>
+                    <a href="/">Home</a>
                 </div>
+                <hr/>
                 <h3>
                     
                     Article Three
