--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,6 +4,7 @@
             <title>
                      Article One | N V ROhit
             </title>
+            <meta name = "viewport" content = "width-device-width,initial-scale-1"/>
         </head>
         <body>
                 <div>
