[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -12,7 +12,9 @@
               margin: 0 auto;
               color:gray;
               font-family:sans-serif;
-              
+              padding-top: 50;
+              padding-left: 40;
+              padding-right: 20;             
               }
             
             </style>
