--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,19 +5,9 @@
                      Article One | N V ROhit
             </title>
             <meta name = "viewport" content = "width-device-width,initial-scale-1"/>
-            <style>
-              .container{
-              
-              max-width:800px;
-              margin: 0 auto;
-              color:gray;
-              font-family:sans-serif;
-              padding-top: 50;
-              padding-left: 40;
-              padding-right: 20;             
-              }
-            
-            </style>
+
+                 <link href="/ui/style.css" rel="stylesheet" />
+
         </head>
         <body>
             <div class="container">
