--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,7 @@
         <div class="center text-big bold">
             <h2>Hi! I am Rohit your webappxx **.</h2>
         </div>
+        <script>alert('Hi is it Ok ..!')</script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
